--- a/curch_3.html
+++ b/curch_3.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Søndermarkskirke - Viborg Churches</title>
+    <title>SORTEBRØDREKIRKE - Viborg Churches</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         </nav>
         <div class="crch-banner-content">
             <div class="crch-name">
-                <h1> VIBORG CATHEDRAL</h1>
+                <h1> SORTEBRØDREKIRKE</h1>
             </div>
             <div class="crch-texts">
                 <h2>MUISIC IN CHRISTMAS</h2>
@@ -57,21 +57,21 @@
             <div class="slideshow-container">
                 <div class="mySlides fade">
                     <div class="numbertext">1 / 4</div>
-                    <img src="images/gal-3-1.jpg" style="width:100%">
+                    <img src="images/gal-2-1.jpg" style="width:100%">
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">2 / 4</div>
-                    <img src="images/gal-3-2.jpg" style="width:100%">
+                    <img src="images/gal-2-2.jpg" style="width:100%">
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">3 / 4</div>
-                    <img src="images/gal-3-3.jpg" style="width:100%">
+                    <img src="images/gal-2-3.jpg" style="width:100%">
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">3 / 4</div>
-                    <img src="images/gal-3-4.jpg" style="width:100%">
+                    <img src="images/gal-2-4.jpg" style="width:100%">
                 </div>
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
